--- a/AdformMcp.csproj
+++ b/AdformMcp.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="ModelContextProtocol" Version="0.6.0-preview.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Instructions\Amplitude.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
