--- a/AdformMcp.csproj
+++ b/AdformMcp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.2" />
     <PackageReference Include="ModelContextProtocol" Version="0.6.0-preview.1" />
+    <PackageReference Include="ReverseMarkdown" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
